// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File renders 1`] = `
<div>
  <span
    className="sc-bdVaJa dllDpZ"
    onClick={[Function]}
    type="module"
  >
    <div
      className="sc-ifAKCX bYFRPh"
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "verticalAlign": "middle",
          }
        }
      >
        <span
          className="sc-htpNat Mtixs"
          type="module"
        />
      </div>
      <span
        className="sc-bxivhb imoJFq"
        title="Test"
      >
        Test
      </span>
    </div>
  </span>
</div>
`;

exports[`File renders alternative 1`] = `
<div>
  <span
    className="sc-bdVaJa FmIIz"
    onClick={[Function]}
    type="directory"
  >
    <div
      className="sc-ifAKCX bYFRPh"
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "verticalAlign": "middle",
          }
        }
      >
        <span
          className="sc-htpNat Mtixs"
          type="directory"
        />
      </div>
      <span
        className="sc-bxivhb imoJFq"
        title="Test"
      >
        Test
      </span>
    </div>
  </span>
</div>
`;

exports[`File renders as active 1`] = `
<div>
  <span
    className="sc-bdVaJa etVJRy"
    onClick={[Function]}
    type="module"
  >
    <div
      className="sc-ifAKCX bYFRPh"
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "verticalAlign": "middle",
          }
        }
      >
        <span
          className="sc-htpNat Mtixs"
          type="module"
        />
      </div>
      <span
        className="sc-bxivhb imoJFq"
        title="Test"
      >
        Test
      </span>
    </div>
  </span>
</div>
`;

exports[`File renders directory 1`] = `
<div>
  <span
    className="sc-bdVaJa dllDpZ"
    onClick={[Function]}
    type="directory"
  >
    <div
      className="sc-ifAKCX bYFRPh"
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "verticalAlign": "middle",
          }
        }
      >
        <span
          className="sc-htpNat Mtixs"
          type="directory"
        />
      </div>
      <span
        className="sc-bxivhb imoJFq"
        title="Test"
      >
        Test
      </span>
    </div>
  </span>
</div>
`;
